user flair overflow fix

--- a/style.scss
+++ b/style.scss
@@ -1250,6 +1250,7 @@ div.side {
 
         + div.tagline {
           @include focus-box;
+          overflow: hidden;
           padding: $sidebar-padding;
           border-top: 0px;
           display: block;
